# Ket

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  THIRD_PARTY_NOTICES.md  compose.edge.yaml  compose.hysteria.yaml  compose.openvpn.yaml  compose.shadowsocks.yaml  compose.wireguard.yaml  compose.xhttp.yaml  compose.xray.yaml  compose.yaml
.github/scripts/: ci-changes.sh
.github/workflows/: ci.yml
apps/ket-android/: THIRD_PARTY_NOTICES.md  local.properties.example  settings.gradle.kts
apps/ket-android/app/: build.gradle.kts
apps/ket-android/app/src/main/: AndroidManifest.xml
apps/ket-android/app/src/main/java/com/ket/android/: AndroidHysteriaEngine.kt  AndroidLeaseRefreshGate.kt  AndroidNodeStatus.kt  AndroidOpenVpnEngine.kt  AndroidOpenVpnManagement.kt  AndroidRoutedInternetProbe.kt  AndroidShadowsocksEngine.kt  AndroidTransport.kt  AndroidTransportEngine.kt  AndroidTransportHistory.kt  AndroidVpnDnsPolicy.kt  AndroidWireGuardTlsEngine.kt  AndroidXrayEngine.kt  DurableTunnelCredentials.kt  EngineConfig.kt  FailClosedVpnRouteGuard.kt  HysteriaTransport.kt  KetAppScreen.kt  KetControlApi.kt  KetProtocol.kt  KetTunnelRuntime.kt  KetVpnService.kt  KetWorldMap.kt  MainActivity.kt  OpenVpnAndroidConfig.kt  OpenVpnStunnelTransport.kt  PinnedTlsTcpBridge.kt  ProcessOutput.kt  RealityTransport.kt  ShadowsocksTransport.kt  StealthTransport.kt  UnderlyingNetworkTracker.kt  WireGuardTlsTransport.kt  WorldMapGeometry.kt
apps/ket-android/app/src/main/java/hev/htproxy/: TProxyService.java
apps/ket-android/app/src/main/jni/: Android.mk  Application.mk  fd_receiver.c
apps/ket-android/app/src/main/res/drawable/: ket_mark.xml  ket_notification.xml
apps/ket-android/app/src/main/res/values/: styles.xml
apps/ket-android/app/src/test/java/com/ket/android/: AndroidLeaseRefreshGateTest.kt  AndroidNodeStatusTest.kt  AndroidRoutedInternetProbeTest.kt  AndroidTransportEngineTest.kt  AndroidTransportHistoryTest.kt  AndroidVpnDnsPolicyTest.kt  DurableTunnelCredentialsTest.kt  FailClosedVpnRouteGuardTest.kt  HysteriaTransportTest.kt  KetAppStatusTest.kt  KetControlApiTest.kt  OpenVpnStunnelTransportTest.kt  ProcessOutputTest.kt  RealityTransportTest.kt  ShadowsocksTransportTest.kt  StealthTransportTest.kt  UnderlyingNetworkTrackerTest.kt  VpnRouteTest.kt  WireGuardTlsTransportTest.kt  WorldMapGeometryTest.kt
apps/ket-desktop/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/ket-desktop/src/: App.test.tsx  App.tsx  styles.css  types.ts
apps/ket-desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.nsis.conf.json
apps/ket-desktop/src-tauri/capabilities/: main.json
apps/ket-desktop/src-tauri/icons/: icon.icns
apps/ket-desktop/src-tauri/src/: lib.rs  main.rs
apps/ket-desktop/src-tauri/windows/: hooks.nsh
apps/ket-desktop/src/components/: ConnectionPanel.test.tsx  ConnectionPanel.tsx  EnrollmentPanel.tsx  MetricsView.tsx  NavRail.tsx  ProtocolsView.tsx  SettingsView.tsx  StatStrip.tsx  TrafficChart.tsx  WorldMap.tsx
apps/ket-desktop/src/lib/: bridge.ts  format.test.ts  format.ts  protocols.ts
crates/ket-client-core/: Cargo.toml
crates/ket-client-core/src/: api.rs  broker.rs  client.rs  error.rs  full_route.rs  hysteria.rs  lib.rs  openvpn.rs  runtime.rs  shadowsocks.rs  state.rs  strategy.rs  system_dns.rs  transport.rs  validation.rs  wireguard.rs  xray.rs
crates/ket-client-core/tests/: xray_reality_e2e.rs
crates/ket-core/: Cargo.toml
crates/ket-core/src/: contract.rs  lib.rs  secret.rs  secret_value.rs
crates/ket-server/: Cargo.toml
crates/ket-server/src/: api.rs  config.rs  data_plane.rs  hysteria.rs  lib.rs  main.rs  model.rs  openvpn.rs  openvpn_agent.rs  repository.rs  service.rs  shadowsocks.rs  system.rs  wireguard.rs  wireguard_agent.rs  xray.rs
crates/ket-server/tests/: concurrent_lifecycle.rs
crates/ket-tunnel-protocol/: Cargo.toml
crates/ket-tunnel-protocol/src/: lib.rs
crates/ket-tunnel-service/: Cargo.toml
crates/ket-tunnel-service/src/: lib.rs  main.rs
docs/: ANDROID.md  ARCHITECTURE.md  CLIENT_CORE.md  CONTROL_API.md  HYSTERIA2.md  OPENVPN_STUNNEL.md  RELEASE.md  SERVER_INSTALL.md  SHADOWSOCKS2022.md  TUNNEL_SERVICE.md  WINDOWS_TESTING.md  WIREGUARD_TLS.md  XHTTP_STEALTH.md  XRAY_REALITY.md
packaging/: build-android.sh  build-multiarch.sh  fetch-hysteria.sh  fetch-openvpn.sh  fetch-shadowsocks.sh  fetch-stunnel.sh  fetch-tun2proxy.sh  fetch-wstunnel.sh  fetch-xray.sh  install-server.sh  prepare-android-engines.sh  shadowsocks-server.acl  test-certificate-trust-bundle.sh  test-install-server.sh  validate-android-apk.sh  validate-desktop-assets.sh  validate-env.sh  verify-linux-deb.sh  verify-openvpn-handshake.sh  verify-shadowsocks-traffic.sh  verify-windows-nsis.ps1  verify-xhttp-tls-traffic.sh
packaging/linux/: Dockerfile.desktop-deb  Ket.desktop.hbs  install-tunnel-service.sh  ket-desktop-launcher  ket-tunnel.service  postinst  postrm  prerm
packaging/openvpn/: ket-server.conf  stunnel-server.conf
packaging/patches/: hev-socks5-tunnel-2.14.0-mapdns-tcp.patch
packaging/server/: build-certificate-trust-bundle.sh  compose.sh  nginx.conf  refresh-certificates.sh
packaging/windows/: install-tunnel-service.ps1
