[package]
name = "ket-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
argon2.workspace = true
blake2.workspace = true
rand.workspace = true
serde.workspace = true
subtle.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
serde_json.workspace = true
